# pocketpaw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pocketpaw-scanner-wheels.yml
client/: package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  oauth.rs  quick_ask.rs  side_panel.rs
client/static/: oauth-loading.html
ee/cloud/: __init__.py  agents_router.py  auth.py  db.py  deps.py  groups_router.py  license_router.py  pockets_router.py  sessions_router.py  socketio_server.py  workspace_router.py
installer/launcher/: bootstrap.py
pocketpaw-scanner/: Cargo.toml  README.md  pyproject.toml
pocketpaw-scanner/benchmarks/: benchmark_suite.py
pocketpaw-scanner/python/pocketpaw_scanner/: __init__.py
pocketpaw-scanner/src/: classify.rs  injection.rs  lib.rs  pii.rs
src/pocketclaw/: __main__.py  dashboard.py
src/pocketpaw/: __main__.py  alert_manager.py  analytics.py  config.py  credentials.py  dashboard.py  dashboard_auth.py  dashboard_channels.py  dashboard_lifecycle.py  dashboard_state.py  dashboard_ws.py  headless.py  usage_tracker.py
tests/: conftest.py  test_analytics_gap_fixes.py  test_api_v1_settings.py  test_credentials.py  test_credentials_v2.py  test_dashboard_starlette_compat.py  test_extras_install.py  test_fast_path.py  test_llm_client.py  test_native_scanner_fallback.py  test_native_scanner_parity.py  test_ollama_agent.py  test_stt.py  test_telegram_adapter.py  test_vectordb.py
tests/e2e/: test_dashboard.py
(+93 files in other folders)
